fix: adjust texts and alignment

--- a/src/Home.css
+++ b/src/Home.css
@@ -204,7 +204,7 @@ img {
 
 .cta-button {
   background-color: #000;
-  color: #176571;
+  color: #2599A7;
   border: none;
   font-size: 16px;
   font-weight: 400;
@@ -246,7 +246,7 @@ img {
 
 .services-grid {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(3, 1fr);
   gap: 35px;
   margin: 60px auto 0;
 }
